# inrmap

./: .gitignore  Cargo.toml  README.md  config.json  package-lock.json
src/: config.rs  hook.rs  main.rs  mapping.rs
src-tauri/: Cargo.toml  index.html  tauri.conf.json
src-tauri/frontend/: index.html  package-lock.json  package.json  vite.config.js
src-tauri/icons/: icon.icns
src-tauri/src/: database.rs  hook.rs  main.rs  mapping.rs
