[package]
name = "inr-remapper"
version = "0.1.0"
edition = "2021"

[dependencies]
rdev = { version = "0.5.0", features = ["unstable_grab"] }
enigo = "0.2"
env_logger = "0.11.10"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
once_cell = "1.20"
ctrlc = "3"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse"
]}